SERVER-30972 avoid oplog manager deadlock at shutdown